sonarlint polishing